# AI_Hub_Discord-Bot

./: .env  .env.example  .gitignore  LICENSE  README.md  bot.py  cookies.json  nixpacks.toml  pyproject.toml
docs/: README.md  README_zh-tw.md
src/Google/: Chat_Bard.py  __init__.py
src/Google/Bard/: Bard_Chat.py  __init__.py
src/Google/Bard_Chat/: Bard_parse.py  __init__.py
src/Microsoft/: Chat_Bing_ChatGPT.py  Draw_Image_Creator.py  __init__.py
src/Microsoft/Bing_EdgeGPT_4/: EdgeGPT_parse.py  __init__.py  cookies.json
src/Microsoft/Bing_Image_Creator/: Image_Creator_parse.py  __init__.py  cookies.json
src/OpenAI/: Chat_ChatGPT.py  Draw_DALL_E.py  __init__.py
src/OpenAI/ChatGPT_3/: ChatGPT_parse.py  __init__.py
src/OpenAI/DALL_E/: DALL_E_parse.py  __init__.py
