[tool.poetry]
name = "AI_Hub_Discord_Bot"
version = "1.5.0"
description = "ChatGPT、BingGPT、Image Creator、DALL_E、Other AI Application with Discord Bot"
keywords = ["python", "python3", "discord-bot", "discord-py", "gpt-3", "gpt-35-turbo", "gpt-4", "chatgpt", "bing chatgpt", "bing image-creator", "delle-2"]
authors = ["Lin-Rexter <aaaa35963596@gmail.com>"]
license = "MIT"
readme = ["docs/README.md", "docs/README_zh-tw.md"]
repository = "https://github.com/Lin-Rexter/AI_Hub_Discord-Bot"


[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
revchatgpt = "^4.0.9"
edgegpt = "^0.1.10.1"
openai = "^0.27.2"
requests = "^2.28.2"
deep-translator = "^1.10.1"
py-cord = "^2.4.1"
numpy = "^1.24.2"
googlebard = "^0.0.6.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
